# PosDoc

OrugaAgronicos_v1/: README.md
Patrones/: Informe.md  predict_percent.py  readme.md  readme.txt  requirements.txt
Plantain-row-robot-ROS2endo/: README.md
ROS/firstAdvance/: bno055ROS.ino  readme.txt  subcriberYDlidar.py  ydLidar.py
Ros2YDlidar_and_microRos_BNO055_platformio_graciasIvan/: grados_con_propulsion.ino  main.cpp  readme.txt
Ros2YDlidar_and_microRos_BNO055_platformio_graciasIvan/LeerCsv_s/: LidarReadings.csv  LidarReadings1.csv  LidarReadings2.csv  LidarReadings4.csv  LidarReadings5.csv  readingFile.py  testPruebaCsv.py
Ros2YDlidar_and_microRos_BNO055_platformio_graciasIvan/OrugaHenry/: publisher_member_fuction.py  publisher_membership_function.py
Ros2YDlidar_and_microRos_BNO055_platformio_graciasIvan/lidarFuentes/: package.xml  publisher_member_fuction.py  setup.py  subscriber_member_function.py  test2.py
chinodelosmandados/esp32/: main.cpp  platformio.ini
chinodelosmandados/esp32_bridge/: esp32_serial_bridge.py  lidarReadings.py  package.xml  setup.py  wallFollower.py
microRosPub_bno055/: micro_ros_pub_sub_BNO055.ino.ino  readme.txt
microRos_BNO055_platformio_graciasIvan/: readme.txt
microRos_BNO055_platformio_graciasIvan/fuentes/: main.cpp
ros2_ydLidar/: package.xml  publisher_member_function.py  setup.py  ydlidar.py
seguidor-de-muro-ros2/seguidor_muro_ws/ros2/: package.xml  setup.py
seguidor-de-muro-ros2/seguidor_muro_ws/ros2/esp32_bridge/: esp32_serial_bridge.py
serial1/: arduino.c  llamas1.py  readme.txt  serialTry2.py
(+21 files in other folders)
